@@ -1,3 +1,4 @@
+* Editor - Basic ::: Scenario: Renaming feature
 * Editor - Basic ::: Scenario: Deleting feature
 
 0.1.1
